update with new libs and features
